<resources>
    <string name="app_name">Cinema On</string>

    <string name="menu_settings">Settings</string>


    <!--  Label for sorting movies preference -->
    <string name="pref_sort_by_label">Sort Movies By</string>

    <!--  Label for Popular -->
    <string name="pref_sort_by_popular_label">Popular</string>

    <!--  Label for Top Rated -->
    <string name="pref_sort_by_top_rated_label">Top Rated</string>

    <!--  Label for Favorites -->
    <string name="pref_sort_by_favorites_label">My Favorites</string>

    <!-- Value in SharedPreferences for sorting the movies -->
    <string name="pref_sort_by_popular" translatable="false">popular</string>

    <!-- Value in SharedPreferences for sorting the movies -->
    <string name="pref_sort_by_top_rated" translatable="false">top_rated</string>

    <!-- Value in SharedPreferences for sorting the movies -->
    <string name="pref_sort_by_favorites" translatable="false">favorites</string>

    <!--  Key name for sorting the movies preference in SharedPreferences -->
    <string name="pref_sort_by_key" translatable="false">sort_by</string>

    <string name="vote_range">&#032;/10</string>
    <string name="error_message">An error has occurred.\nPlease check your internet connection.</string>
    <string name="overview_label">Overview</string>
    <string name="release_date_label">Release Date</string>
    <string name="description_backdrop_image">Expandable image background of the movie</string>
    <string name="description_movie_poster">Poster of the movie</string>
    <string name="original_title_label">Original Title</string>
    <string name="movie_poster_description">Movie poster</string>
    <string name="genres_label">Genres</string>
    <string name="read_more">Read More</string>
    <string name="author">Author:</string>
    <string name="no_genres">No genres</string>
    <string name="no_trailers">No Trailers for this movie</string>
    <string name="no_reviews">No Reviews for this movie</string>
    <string name="share_settings">Share</string>
    <string name="movie_trailer_title">Title of the Movie Trailer</string>
    <string name="no_favorite_movies">No movies saved to Favorites.\nAdd movies to your list.</string>
    <string name="sort_movies_title">Sort Movies</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="trailer_thumbnail_content_description">Trailer placeholder image for the current movie</string>
    <string name="play_image_content_description">Image button that display play button</string>
</resources>
